@@ -1,5 +1,9 @@
 Changes for APR 1.3.0
 
+  *) Add apr_file_buffer_set() and apr_file_buffer_size_get() functions
+     to support variable buffer sizes with APR file handles.
+     [Colm MacCarthaigh]
+
   *) Add apr_file_open_flags_std[err|out|in]() functions.
      [Colm MacCarthaigh]
 
